fix positioning on mobile

--- a/scss/game.scss
+++ b/scss/game.scss
@@ -7,7 +7,6 @@
 }
 #game {
 	flex-grow: 1;
-	margin-bottom: 30px;
 	position: relative;
 	width: 100%;
 	#drawCardsToggle {
@@ -50,6 +49,9 @@
 		flex-direction: column;
 		z-index: 100;
 		.cardsWrapper {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
 			position: relative;
 			width: 100%;
 			height: 100%;
@@ -64,14 +66,17 @@
 			position: relative;
 			perspective: 2000px;
 			transition: transform 750ms ease-in-out;
+			height: 300px;
 			width: 300px;
 			margin-left: auto;
 			margin-right: auto;
 			.card, .deck {
 				position: absolute;
+				bottom: 0;
 				top: 0;
 				left: 0;
-				height: 150%;
+				right: 0;
+				height: 100%;
 				width: 100%;
 				max-width: 400px;
 				margin-top: 10%;
@@ -88,12 +93,6 @@
 					margin-top: 0%;
 					img {
 						transform: rotate(0) !important;
-					}
-				}
-				@media screen and (min-width: 400px) {
-					margin-top: 45%;
-					&.open {
-						margin-top: 10%;
 					}
 				}
 				.back {
@@ -317,9 +316,13 @@
 	height: calc(100vh - 120px);
 }
 #notice {
+	@media screen and (max-width: 481px) {
+		display: none;
+	}
 	background-color: $gray;
 	color: $black;
 	padding: 30px;
+	margin-top: 30px;
 	p {
 		margin-bottom: 0;
 	}
